// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshots Video facebook 1`] = `
<styled.article>
  <styled.div>
    facebook based video
  </styled.div>
  <styled.div>
    56789
  </styled.div>
  <styled.div>
    F34fdvsf43
  </styled.div>
</styled.article>
`;

exports[`snapshots Video url 1`] = `
<styled.article>
  <styled.div>
    url based video
  </styled.div>
  <styled.div>
    3445
  </styled.div>
  <styled.div>
    http://g.com/1.mp4
  </styled.div>
</styled.article>
`;

exports[`snapshots Video youtube 1`] = `
<styled.article>
  <styled.div>
    youtube based video
  </styled.div>
  <styled.div>
    214526
  </styled.div>
  <styled.div>
    Y34fdvsf43
  </styled.div>
</styled.article>
`;
